Comaas versions are now build numbers (#35)
package.sh takes build number as its argument, supplied by Jenkins

The Comaas version will be something like "2017.11.123", where the 123 is
a sequential build number provided by Jenkins, or YYYY.mm.buildnr.

It is no longer necessary to provide the build with a "revision", this
has been replaced with the default version "1-SNAPSHOT" which will
be updated by package.sh using mvn:versions.